add connector modal new page

--- a/backend/css/bootstrap.css
+++ b/backend/css/bootstrap.css
@@ -8736,205 +8736,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #829fe3; }
+  background: #d071ce; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #f25e3d; }
+  background: #12f810; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #74b69a; }
+  background: #8fb1f6; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #0e1246; }
+  background: #b8d5b8; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #3af3dd; }
+  background: #1b9486; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #9db82e; }
+  background: #b96c20; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #16820d; }
+  background: #92f2db; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #b5a006; }
+  background: #7f3def; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b009fc; }
+  background: #c0e0b2; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #1356d7; }
+  background: #f7fa40; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #649b5a; }
+  background: #961e21; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #fc2766; }
+  background: #88c855; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #05b097; }
+  background: #020527; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #2da07b; }
+  background: #252e01; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #75a82d; }
+  background: #097ce6; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #dddf68; }
+  background: #aee7b4; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #159988; }
+  background: #36581a; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #597908; }
+  background: #ef2842; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #08db7e; }
+  background: #c15ff7; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #4187c8; }
+  background: #a5f9b1; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #a11b57; }
+  background: #8d6d38; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #ea22b4; }
+  background: #2a89c9; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #a19617; }
+  background: #41d7eb; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #132603; }
+  background: #427790; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #4f3176; }
+  background: #081814; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #17fc01; }
+  background: #2b1d44; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #65576b; }
+  background: #48e732; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #b1eb50; }
+  background: #770231; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #ad9fcb; }
+  background: #6e7f10; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #b45539; }
+  background: #1744c7; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #8108a9; }
+  background: #0c7f8f; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #47802c; }
+  background: #2e490e; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #42cf9a; }
+  background: #8756a9; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #3328f8; }
+  background: #b43787; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #9d8eb0; }
+  background: #26e283; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #23c635; }
+  background: #4f8e94; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #d0f51a; }
+  background: #ff56bb; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #e4910e; }
+  background: #5e83b2; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #bf5a64; }
+  background: #cb4f9d; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #fab421; }
+  background: #8d536b; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #7ba071; }
+  background: #f2bda0; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #22c688; }
+  background: #9f436e; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #b50e74; }
+  background: #6618b8; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #dea7a8; }
+  background: #d09dd9; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #907149; }
+  background: #04297a; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #a885ca; }
+  background: #dddb02; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #42cb03; }
+  background: #241d65; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #1a5fba; }
+  background: #5ba604; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #231586; }
+  background: #f658ef; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #17c3ad; }
+  background: #ac6c33; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #1bf41f; }
+  background: #7252e9; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #51b581; }
+  background: #62e6f2; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #2ffbca; }
+  background: #7f756a; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #962e55; }
+  background: #2394e0; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #4d331e; }
+  background: #cad86b; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #e5fccd; }
+  background: #8357ef; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #be7651; }
+  background: #5b186c; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #fdec88; }
+  background: #aefdda; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #80f9f4; }
+  background: #29a041; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #3882e5; }
+  background: #eece20; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #92db2a; }
+  background: #6fa8a4; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #87094b; }
+  background: #e72340; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #fba973; }
+  background: #dccb03; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #98c0a3; }
+  background: #7c43e8; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #2feea5; }
+  background: #afc3bc; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #14ff24; }
+  background: #c215ef; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #77137e; }
+  background: #ab9109; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #2f8078; }
+  background: #e0d3e8; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #ac4ad7; }
+  background: #9a8d41; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #b428d5; }
+  background: #ac03fe; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #705440; }
+  background: #90beca; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #802f1c; }
+  background: #7fde1a; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #c1bc89; }
+  background: #c4e0de; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #25d709; }
+  background: #aff778; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #927ac0; }
+  background: #d8d5ab; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #4f3bc8; }
+  background: #a7b143; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #6dd9a5; }
+  background: #a31650; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #a488a7; }
+  background: #90a1ac; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #20a0e4; }
+  background: #873e9d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #59ad89; }
+  background: #31b56f; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #0a4636; }
+  background: #6a6bbd; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #653324; }
+  background: #15de64; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #24a480; }
+  background: #4d09cf; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #b95f8e; }
+  background: #f001dc; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #3d8e89; }
+  background: #ae4a7a; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #e29168; }
+  background: #904573; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #a54801; }
+  background: #c07610; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #f4a156; }
+  background: #094025; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #d1b2b2; }
+  background: #f1eb1b; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #825225; }
+  background: #cb14d8; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #2d8add; }
+  background: #c00945; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #39f653; }
+  background: #60347f; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #c1d3d9; }
+  background: #ef90fd; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #fabf5f; }
+  background: #6d7870; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #e90991; }
+  background: #b7ba8c; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #4ced67; }
+  background: #02fb72; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #348c1b; }
+  background: #974bcf; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #bd2f45; }
+  background: #08b2d9; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #599a41; }
+  background: #c8ba59; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #eade70; }
+  background: #2c7ec3; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
