--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8736,205 +8736,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #2096d7; }
+  background: #908a84; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #16d5f3; }
+  background: #92a5b0; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #e054f7; }
+  background: #84e79a; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #47e7dd; }
+  background: #5e138c; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #edaa10; }
+  background: #39cbbc; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #9e449a; }
+  background: #2ecebf; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #4a61f0; }
+  background: #0eb330; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #e9bfc0; }
+  background: #c8c68c; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #c1d71f; }
+  background: #583ca3; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #09e6af; }
+  background: #013eba; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #9da162; }
+  background: #91de27; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #83fd63; }
+  background: #c8cdc7; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #e7dd5b; }
+  background: #d9803d; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #389515; }
+  background: #2aa8b1; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #1bc17b; }
+  background: #d957af; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #59208f; }
+  background: #24e08c; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #aa49c3; }
+  background: #151ff8; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #266975; }
+  background: #19b8e9; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #50daa3; }
+  background: #02c2b5; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #97ba26; }
+  background: #b40db5; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #b6fffb; }
+  background: #302d05; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #600ada; }
+  background: #873fef; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #cb2009; }
+  background: #1a9441; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #4b1856; }
+  background: #c4e738; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #eadb60; }
+  background: #6c4923; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #888c68; }
+  background: #9ea88c; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #261a94; }
+  background: #8754d2; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #5b95e0; }
+  background: #2b0232; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #e4960a; }
+  background: #d2e1ba; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #983d31; }
+  background: #f0abac; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #5eba83; }
+  background: #ead8ee; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #43590c; }
+  background: #85f1bd; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #9bbda7; }
+  background: #66de1d; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #689209; }
+  background: #5ce485; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #e49ab9; }
+  background: #e5d5a4; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #c1e133; }
+  background: #8a54cd; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #9c517e; }
+  background: #22c31a; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #016bcb; }
+  background: #79c719; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #58e321; }
+  background: #7f46a8; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #ea5eea; }
+  background: #9a56f9; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #d80a88; }
+  background: #ba245d; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #1efc74; }
+  background: #497e3d; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #418a04; }
+  background: #6fab44; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #3a80fa; }
+  background: #41b1f9; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #315ff1; }
+  background: #9e0979; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #459863; }
+  background: #a49ebf; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #9eec6b; }
+  background: #64f9f0; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #800a51; }
+  background: #92adfa; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #e36ed5; }
+  background: #069882; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #38e7ac; }
+  background: #df68ea; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #225e75; }
+  background: #22c990; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #fcec30; }
+  background: #b4b185; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #1d0a35; }
+  background: #551958; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #05c98a; }
+  background: #3dc3d0; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #5add97; }
+  background: #6c672f; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #6c2bef; }
+  background: #2693c9; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #123c4c; }
+  background: #77fff2; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #b44049; }
+  background: #f5f956; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #a3cc4c; }
+  background: #f5ee15; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #41872b; }
+  background: #9f9fad; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #b6eeb2; }
+  background: #6359e2; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #776578; }
+  background: #e1161d; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #d775c8; }
+  background: #2fbefd; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #6901bb; }
+  background: #9cc8f1; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #21eacb; }
+  background: #2a1ff0; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #323229; }
+  background: #3838fd; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #23d725; }
+  background: #2c97b8; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #e6e3de; }
+  background: #5010fb; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #27bfcb; }
+  background: #c1f6dc; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #7e066a; }
+  background: #2411c0; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #5f033a; }
+  background: #03ac8a; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #ad4a5e; }
+  background: #96d487; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #7dc84e; }
+  background: #8b748b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #f102e5; }
+  background: #cc14b6; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #581172; }
+  background: #24a976; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #228f06; }
+  background: #26d00c; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #83bc87; }
+  background: #f6253e; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #af5634; }
+  background: #8a0fd7; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #6b9785; }
+  background: #ec6814; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #5209a3; }
+  background: #93d24b; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #ef886e; }
+  background: #541872; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #d0029d; }
+  background: #c99976; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #185239; }
+  background: #aacbef; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #183a95; }
+  background: #d90fa8; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #757111; }
+  background: #e8fee6; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #27567e; }
+  background: #539886; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #2935c4; }
+  background: #cdafaa; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #d8fbb3; }
+  background: #b630e9; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #3b62e7; }
+  background: #a5d605; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #ffc869; }
+  background: #1e1634; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #c7f2e9; }
+  background: #83a019; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #58a5c6; }
+  background: #f3d36b; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #011731; }
+  background: #0d2e8d; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #9f66de; }
+  background: #1a1c0d; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #30adc5; }
+  background: #a70478; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #389fab; }
+  background: #46a3f5; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #7d17bd; }
+  background: #adccb6; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #bcbcfb; }
+  background: #34c6bb; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #9a5750; }
+  background: #44af62; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #c5309f; }
+  background: #509487; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
