--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8736,205 +8736,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #908a84; }
+  background: #ab8a8a; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #92a5b0; }
+  background: #b72ab7; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #84e79a; }
+  background: #332795; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #5e138c; }
+  background: #beda9a; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #39cbbc; }
+  background: #5de7b4; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #2ecebf; }
+  background: #17b7aa; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #0eb330; }
+  background: #5b41a3; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #c8c68c; }
+  background: #208447; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #583ca3; }
+  background: #0dc114; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #013eba; }
+  background: #b4e906; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #91de27; }
+  background: #d90734; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #c8cdc7; }
+  background: #6da4af; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #d9803d; }
+  background: #be24e6; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #2aa8b1; }
+  background: #3075e0; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #d957af; }
+  background: #a444cd; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #24e08c; }
+  background: #6f9615; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #151ff8; }
+  background: #e7ea7a; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #19b8e9; }
+  background: #808d73; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #02c2b5; }
+  background: #61e238; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #b40db5; }
+  background: #0eb741; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #302d05; }
+  background: #2022dd; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #873fef; }
+  background: #73e6ed; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #1a9441; }
+  background: #b099fa; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #c4e738; }
+  background: #4ab26e; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #6c4923; }
+  background: #4d4212; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #9ea88c; }
+  background: #e38348; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #8754d2; }
+  background: #b63fe7; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #2b0232; }
+  background: #9a8210; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #d2e1ba; }
+  background: #5c80c6; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #f0abac; }
+  background: #5052ca; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #ead8ee; }
+  background: #b15449; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #85f1bd; }
+  background: #7a6ea7; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #66de1d; }
+  background: #1ca726; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #5ce485; }
+  background: #75c51c; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #e5d5a4; }
+  background: #9a5830; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #8a54cd; }
+  background: #6dcf51; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #22c31a; }
+  background: #cb157f; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #79c719; }
+  background: #45ac16; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #7f46a8; }
+  background: #af0107; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #9a56f9; }
+  background: #ab58ca; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #ba245d; }
+  background: #4ec880; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #497e3d; }
+  background: #ae6190; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #6fab44; }
+  background: #db75ec; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #41b1f9; }
+  background: #fb6c53; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #9e0979; }
+  background: #208c96; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #a49ebf; }
+  background: #d76bee; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #64f9f0; }
+  background: #c2f6c2; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #92adfa; }
+  background: #f0299a; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #069882; }
+  background: #0dfbc1; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #df68ea; }
+  background: #64169f; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #22c990; }
+  background: #ed4f25; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #b4b185; }
+  background: #ffa601; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #551958; }
+  background: #20d7ed; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #3dc3d0; }
+  background: #d6f98b; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #6c672f; }
+  background: #249bff; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #2693c9; }
+  background: #110fa1; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #77fff2; }
+  background: #5a4867; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #f5f956; }
+  background: #b50a1d; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #f5ee15; }
+  background: #4eacb7; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #9f9fad; }
+  background: #947cb5; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #6359e2; }
+  background: #c0df01; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #e1161d; }
+  background: #962676; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #2fbefd; }
+  background: #fd8e5c; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #9cc8f1; }
+  background: #f4b7d1; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #2a1ff0; }
+  background: #87ccc8; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #3838fd; }
+  background: #a2de34; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #2c97b8; }
+  background: #ebd2e2; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #5010fb; }
+  background: #d18e6a; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #c1f6dc; }
+  background: #461bd8; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #2411c0; }
+  background: #2ded57; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #03ac8a; }
+  background: #64e401; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #96d487; }
+  background: #0b94ee; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #8b748b; }
+  background: #e8e520; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #cc14b6; }
+  background: #f222a6; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #24a976; }
+  background: #84251a; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #26d00c; }
+  background: #77c26b; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #f6253e; }
+  background: #efdd4b; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #8a0fd7; }
+  background: #cde0f1; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #ec6814; }
+  background: #e40b8c; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #93d24b; }
+  background: #e29ed4; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #541872; }
+  background: #c8237c; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #c99976; }
+  background: #2a5ce9; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #aacbef; }
+  background: #8bcefd; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #d90fa8; }
+  background: #583fdc; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #e8fee6; }
+  background: #12700a; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #539886; }
+  background: #393d06; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #cdafaa; }
+  background: #c30622; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #b630e9; }
+  background: #4096a3; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #a5d605; }
+  background: #869765; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #1e1634; }
+  background: #52c077; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #83a019; }
+  background: #ed7e14; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #f3d36b; }
+  background: #2d8c53; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #0d2e8d; }
+  background: #08f3c0; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #1a1c0d; }
+  background: #54b36f; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #a70478; }
+  background: #0736ea; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #46a3f5; }
+  background: #bd129d; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #adccb6; }
+  background: #890aae; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #34c6bb; }
+  background: #1eb478; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #44af62; }
+  background: #95be2c; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #509487; }
+  background: #0a9227; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11577,15 +11577,11 @@ input:checked + .sliders:before {
 .role-to-txt h2 {
   padding-left: 35px; }
 
-.modal-add-connections-wrapper
-.adding-adapter-modal-header
-.adapter-modal-logo {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
   height: 55px !important;
   width: 55px !important; }
 
-.modal-add-connections-wrapper
-.adding-adapter-modal-header
-.adapter-modal-name {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
   font-size: 20px !important; }
 
 .modal-add-connections-wrapper input[type="text"] {
@@ -12085,10 +12081,9 @@ ul li:last-child .active-btn ::before {
   border: 2px solid #776fff; }
 
 .policy-btns-wrapper {
-  text-align: right;
-  padding: 0px 33px; }
+  text-align: right; }
   .policy-btns-wrapper button {
-    margin-right: 15px; }
+    margin-left: 15px; }
 
 /*AND OR BTN CSS NEW*/
 .switch-btn {
