--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -70,7 +70,7 @@
   margin: 1rem 0rem;
 }
 
-.center-y h3 + a {
+.center-y h3+a {
   font-size: 1.6rem;
   display: inline-block;
   color: #000;
@@ -100,7 +100,7 @@
 }
 
 h3,
-h3 + a {
+h3+a {
   // opacity: 0;
   // -webkit-transition: opacity 0.7s 0s, -webkit-transform 0.5s 0.2s;
   // transition: opacity 0.7s 0s, -webkit-transform 0.5s 0.2s;
@@ -111,7 +111,7 @@ h3 + a {
 }
 
 li.current h3,
-li.current h3 + a {
+li.current h3+a {
   // opacity: 1;
   // -webkit-transition-delay: 1s;
   // transition-delay: 1s;
@@ -189,6 +189,7 @@ li.prev {
 
 .modal-add-connections-wrapper,
 .LoginPanel {
+
   input[type="text"],
   input[type="password"],
   textarea {
@@ -208,8 +209,7 @@ li.prev {
     line-height: 1em;
     width: 100%;
     -moz-appearance: none;
-    background: #fff url(../images/drop-arrow-green.png) no-repeat scroll 97%
-      13px;
+    background: #fff url(../images/drop-arrow-green.png) no-repeat scroll 97% 13px;
     box-sizing: border-box;
     cursor: pointer;
   }
@@ -262,7 +262,7 @@ li.prev {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.LoginPanel .fieldsBotSection input[type="checkbox"]:checked + label {
+.LoginPanel .fieldsBotSection input[type="checkbox"]:checked+label {
   background-image: url(../images/checkbox-img.png);
 }
 
@@ -275,7 +275,7 @@ li.prev {
   right: 22px;
 }
 
-.LoginPanel .login-pass-div input[type="checkbox"]:checked + label {
+.LoginPanel .login-pass-div input[type="checkbox"]:checked+label {
   background-image: url(../images/eye-dark.png);
 }
 
@@ -602,15 +602,15 @@ input[type="submit"] {
   transition: 0.4s;
 }
 
-input:checked + .sliders {
+input:checked+.sliders {
   background-color: #776fff;
 }
 
-input:focus + .sliders {
+input:focus+.sliders {
   box-shadow: 0 0 1px #776fff;
 }
 
-input:checked + .sliders:before {
+input:checked+.sliders:before {
   -webkit-transform: translateX(20px);
   -ms-transform: translateX(20px);
   transform: translateX(20px);
@@ -682,7 +682,7 @@ input:checked + .sliders:before {
 }
 
 .table-icon span,
-.table-icon span + span {
+.table-icon span+span {
   letter-spacing: 4px;
   font-size: 18px;
 }
@@ -732,16 +732,12 @@ input:checked + .sliders:before {
   padding-left: 35px;
 }
 
-.modal-add-connections-wrapper
-  .adding-adapter-modal-header
-  .adapter-modal-logo {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
   height: 55px !important;
   width: 55px !important;
 }
 
-.modal-add-connections-wrapper
-  .adding-adapter-modal-header
-  .adapter-modal-name {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
   font-size: 20px !important;
 }
 
@@ -754,7 +750,7 @@ input:checked + .sliders:before {
   width: 100%;
 }
 
-.modal-add-connections-wrapper .adapter-modal-bottom-row div + div {
+.modal-add-connections-wrapper .adapter-modal-bottom-row div+div {
   margin-right: 0px;
 }
 
@@ -934,8 +930,8 @@ input:checked + .sliders:before {
     font-size: 14px;
   }
 
-  .dropdown-with-img-select div + div,
-  .dropdown-with-logos div + div {
+  .dropdown-with-img-select div+div,
+  .dropdown-with-logos div+div {
     font-size: 12px;
   }
 
@@ -1251,11 +1247,11 @@ input:checked + .sliders:before {
   background: dodgerblue;
 }
 
-.list-ic .active ~ li {
+.list-ic .active~li {
   background: lightblue;
 }
 
-.list-ic .active ~ li::before {
+.list-ic .active~li::before {
   background: lightblue;
 }
 
@@ -1476,10 +1472,10 @@ ul li:last-child {
 
 .policy-btns-wrapper {
   text-align: right;
-  padding: 0px 33px;
+  // padding: 0px 15px;
 
   button {
-    margin-right: 15px;
+    margin-left: 15px;
   }
 }
 
@@ -1520,15 +1516,15 @@ ul li:last-child {
   transition: 0.4s;
 }
 
-input:checked + .sliderss {
+input:checked+.sliderss {
   background-color: #776fff;
 }
 
-input:focus + .sliderss {
+input:focus+.sliderss {
   box-shadow: 0 0 1px #776fff;
 }
 
-input:checked + .sliderss:before {
+input:checked+.sliderss:before {
   -webkit-transform: translateX(44px);
   -ms-transform: translateX(44px);
   transform: translateX(44px);
@@ -1550,7 +1546,7 @@ input:checked + .sliderss:before {
   font-family: Verdana, sans-serif;
 }
 
-input:checked + .sliderss .on {
+input:checked+.sliderss .on {
   display: block;
   font-size: 14px;
   padding-left: 10px;
@@ -1558,7 +1554,7 @@ input:checked + .sliderss .on {
   left: 26%;
 }
 
-input:checked + .sliderss .off {
+input:checked+.sliderss .off {
   display: none;
 }
 
@@ -1599,11 +1595,11 @@ input:checked + .sliderss .off {
     transition: 0.4s;
   }
 
-  input:checked + .sliders-Not {
+  input:checked+.sliders-Not {
     background-color: #776fff;
   }
 
-  input:focus + .sliders-Not {
+  input:focus+.sliders-Not {
     box-shadow: 0 0 1px #776fff;
   }
 }
@@ -1637,7 +1633,7 @@ input:checked + .sliderss .off {
   margin-right: 10px;
 }
 
-input:checked + .sliders-Not .not-white-bg {
+input:checked+.sliders-Not .not-white-bg {
   display: block;
   color: #fff;
   background-color: #776fff;
@@ -1648,7 +1644,7 @@ input:checked + .sliders-Not .not-white-bg {
   // left: 26%;
 }
 
-input:checked + .sliders-Not .not-blue-bg {
+input:checked+.sliders-Not .not-blue-bg {
   display: none;
 }
 
@@ -1833,14 +1829,14 @@ input:checked + .sliders-Not .not-blue-bg {
 }
 
 /* On mouse-over, add a grey background color */
-.check-container:hover input ~ .checkmark {
+.check-container:hover input~.checkmark {
   background-color: #fff;
   border: 1px solid #717171;
   border-radius: 6px;
 }
 
 /* When the checkbox is checked, add a blue background */
-.check-container input:checked ~ .checkmark {
+.check-container input:checked~.checkmark {
   background-color: #717171;
   border: 1px solid #717171;
   border-radius: 6px;
@@ -1854,7 +1850,7 @@ input:checked + .sliders-Not .not-blue-bg {
 }
 
 /* Show the checkmark when checked */
-.check-container input:checked ~ .checkmark:after {
+.check-container input:checked~.checkmark:after {
   display: block;
 }
 
@@ -1904,14 +1900,14 @@ td {
     font-family: Verdana, sans-serif;
   }
 
-  input:checked + .sliderss .on {
+  input:checked+.sliderss .on {
     display: block;
     font-size: 14px;
     padding-left: 10px;
     left: 10%;
   }
 
-  input:checked + .sliderss::before {
+  input:checked+.sliderss::before {
     -webkit-transform: translateX(57px);
     -ms-transform: translateX(57px);
     transform: translateX(57px);
@@ -2065,12 +2061,12 @@ td {
 /* Create a custom checkbox */
 
 /* On mouse-over, add a grey background color */
-.container-custom-checkbox:hover input ~ .checkmark {
+.container-custom-checkbox:hover input~.checkmark {
   background-color: #ccc;
 }
 
 /* When the checkbox is checked, add a blue background */
-.container-custom-checkbox input:checked ~ .checkmark {
+.container-custom-checkbox input:checked~.checkmark {
   background-color: #776fff;
   border: 1px solid #776fff;
 }
@@ -2078,7 +2074,7 @@ td {
 /* Create the checkmark/indicator (hidden when not checked) */
 
 /* Show the checkmark when checked */
-.container-custom-checkbox input:checked ~ .checkmark:after {
+.container-custom-checkbox input:checked~.checkmark:after {
   display: block;
 }
 
@@ -2114,7 +2110,7 @@ td {
   margin-bottom: 0px !important;
 }
 
-.box-bottom-bar .field-check-box input[type="checkbox"]:checked + label {
+.box-bottom-bar .field-check-box input[type="checkbox"]:checked+label {
   background-image: url(../images/enable-check.png);
 }
 
@@ -2174,8 +2170,7 @@ td {
         font-size: 14px;
       }
 
-      h3 {
-      }
+      h3 {}
 
       .color-text {
         margin-top: 5px;
@@ -2522,6 +2517,7 @@ table .parent-row,
 .child-row-no-td-border {
   border-bottom: 1px solid #ecedf2 !important;
 }
+
 .c-gray-td {
   padding: 8px;
   background: #bbb;
